Travel Guide/style.css
@font-face {
    font-family: 'BlissPro-ExtraLight';
    src: url('./fonts/BlissPro-ExtraLight.woff') format('woff'), url('./fonts/BlissPro-ExtraLight.svg#BlissPro-ExtraLight') format('svg');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'BlissPro-Light';
    src: url('./fonts/BlissPro-Light.woff') format('woff'), url('./fonts/BlissPro-Light.svg#BlissPro-Light') format('svg');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

html {
    box-sizing: border-box;
}

*,
*:before,
*:after {
    box-sizing: inherit;
    -webkit-tap-highlight-color: transparent;
}

body {
    background: url("https://res.cloudinary.com/dvhndpbun/image/upload/q_auto:low/v1591347437/norway-bg.jpg")no-repeat center center fixed, url("https://res.cloudinary.com/dvhndpbun/image/upload/q_5/v1591347437/norway-bg.jpg") no-repeat center center fixed;
    background-size: cover, cover;
    font-family: 'BlissPro-Light';
    margin: 0;
    padding: 0 0;
    color: #fff;
}

a {
    text-decoration: none;
    color: inherit;
}

.lazy-load {
    display: none;
}

nav {
    align-items: center;
    background: hsla(238, 44%, 11%, 0.623);
    display: flex;
    justify-content: space-between;
    padding: .6rem 5.5%;
    white-space: nowrap;
    position: relative;
}

.logo {
    z-index: 2;
}

.logo .logo-text {
    font-family: 'Merienda', cursive;
    font-size: 2.3rem;
    font-weight: 700;
    margin: 1rem 0 0;
}

input[type=checkbox] {
    display: none;
}

.nav-links {
    display: flex;
}

.nav-links>span:nth-child(-n+5) {
    margin-right: 1vw;
    padding: 1rem 1.6rem;
    transition: all 400ms ease-in-out;
}

.nav-links>span:nth-child(-n+5):hover {
    background: hsla(180, 1%, 73%, 0.192);
}

.nav-links>span:nth-child(-n+5):after {
    content: "";
    height: 2px;
    width: 0;
    background: #fff;
    display: block;
    margin-top: 12px;
    transition: 500ms ease-in-out;
}

.nav-links>span:nth-child(-n+5):hover:after {
    width: 108%;
}

.nav-links>span:nth-child(-n+5)>a {
    font-size: 1.2rem;
    margin-bottom: 4px;
    display: inline-block;
}

.nav-links>span:nth-child(-n+5)>a:hover {
    transform: scale(1.05);
    cursor: pointer;
}

.nav-links>span:nth-child(-n+5)>div>a {
    display: inline-block;
}

.nav-links>span:nth-child(-n+5)>div>a:hover {
    transform: scale(1.05);
    -webkit-text-stroke: 0 hsla(0, 0%, 100%, 0.623);
    cursor: pointer;
}

.logo>p:nth-child(2) {
    font-size: 1rem;
    margin-top: 0;
    position: relative;
    top: -.6rem;
    left: 2.3rem;
}

.nav-links>span:nth-child(-n+5)>div>a,
.logo>p:nth-child(2),
.hero--small_text,
.call-to-action>p:nth-child(n+2) {
    font-family: 'BlissPro-ExtraLight';
    -webkit-text-stroke: .40px hsla(238, 44%, 11%, 0.623);
}

.hero {
    padding: 0 5.5%;
}

.hero--large_text {
    font-family: 'Playfair Display', serif;
    font-weight: 900;
    font-size: 5.3rem;
    width: 10ch;
    margin: .6em 0 .35rem;
    line-height: 1.2;
}

.hero--small_text {
    font-size: 1.3rem;
    width: 45ch;
    line-height: 1.4;
    margin-bottom: 4.3rem;
}

.btn {
    font-size: 1.15rem;
    width: 13%;
    border: 2px solid #fff;
    color: #fff;
    border-radius: 50px;
    background: transparent;
    padding: .8rem 4px;
    outline: none;
    white-space: nowrap;
    cursor: pointer;
}

.btn:focus,
.btn:hover {
    background: #fff;
    border: 2px solid #000;
    color: #000;
}

.call-to-action {
    background: hsla(227, 46%, 8%, 0.575);
    font-size: 1.2rem;
    width: fit-content;
    margin-left: auto;
    padding: 1rem 3rem 1rem 3rem;
    text-align: right;
    position: absolute;
    line-height: .8;
    bottom: 1.8rem;
    right: 2.5rem;
    cursor: pointer;
    white-space: nowrap;
}

.call-to-action>p:nth-child(n+2) {
    font-family: 'BlissPro-ExtraLight';
}

.call-to-action>p:nth-child(3)>span {
    font-family: 'BlissPro-Light';
}


/* Media Queries */

@media (max-width: 1580px) {
    .hero--large_text {
        font-size: calc(1.2vw + 3.5rem);
    }

    .hero--small_text {
        font-size: calc(12px + 6 * ((100vw - 320px) / 680));
        width: 40ch;
    }

    .btn {
        width: 14%;
    }
}

@media (max-width: 1022px) {
    nav {
        padding: 0 5.5%;
    }

    nav label {
        padding: .2rem;
        display: flex;
    }

    input[type=checkbox]:checked~.nav-links {
        display: flex;
        visibility: visible;
        flex-direction: column;
        padding: 5.5rem 0 4rem;
        opacity: 1;
    }

    input[type=checkbox] {
        right: 6.5%;
        position: absolute;
        display: block;
        z-index: 3;
        transform: scale(2.5);
        top: 40%;
        opacity: 0;
        cursor: pointer;
    }

    .hamburger-wrapper {
        cursor: pointer;
        z-index: 2;
        outline: none;
    }

    .hamburger-wrapper span {
        display: block;
        width: 30px;
        height: 3px;
        margin-bottom: 5px;
        position: relative;
        background: #cdcdcd;
        border-radius: 50px;
        transition: all 0.4s;
    }

    /* hamburger hover effect */
    input[type=checkbox]:hover~.hamburger-wrapper>span:nth-child(1) {
        transform: translateY(-2px);
        background: #b84642;
    }

    input[type=checkbox]:hover~.hamburger-wrapper>span:nth-child(3) {
        transform: translateY(2px);
    }

    /* hamburger hover effect when it has been clicked ----- Used to fix 
    disparity when hambuger is clicked but the hover state is still on the hidden checkbox */
    input[type=checkbox]:checked:hover~.hamburger-wrapper>span:nth-child(1) {
        transform: translateY(10px) translateX(0) rotate(45deg);
    }

    input[type=checkbox]:checked:hover~.hamburger-wrapper>span:nth-child(3) {
        transform: translateY(-4px) translateX(0) rotate(-45deg);
    }

    /* toggle rotate effect */
    input[type=checkbox]:checked~.hamburger-wrapper :nth-child(1) {
        transform: translateY(10px) translateX(0) rotate(45deg);
        background: #b84642;
    }

    input[type=checkbox]:checked~.hamburger-wrapper :nth-child(2) {
        opacity: 0;
    }

    input[type=checkbox]:checked~.hamburger-wrapper :nth-child(3) {
        transform: translateY(-6px) translateX(0) rotate(-45deg);
    }

    .nav-links {
        position: absolute;
        display: block;
        visibility: hidden;
        background: rgba(3, 1, 12, 0.96);
        right: 0;
        width: 100%;
        text-align: center;
        top: 0;
        opacity: 0;
        transition: all 350ms ease-in-out, opacity 0ms;
    }

    .nav-links>span:nth-child(-n+5) {
        margin-right: 0;
        margin-bottom: 2rem;
        padding: 0;
    }

    .nav-links>span:nth-child(-n+5):hover {
        background: hsla(2, 47%, 49%, 0.425);
    }

    .nav-links>span:nth-child(-n+5):hover:after {
        width: 100%;
    }

    .hero--large_text {
        font-size: calc(1.2vw + 2.8rem);
    }

    .hero--small_text {
        font-size: 1.05rem;
        width: 85%;
        max-width: 400px;
        -webkit-text-stroke: #fff;
        background: hsla(0, 0%, 0%, 0.451);
    }

    .call-to-action {
        background: hsla(227, 46%, 8%, 0.575);
        font-size: .85rem;
    }

    .btn {
        width: 8rem;
        padding: .6rem 4px;
    }
}


/* Smaller screens */

@media (max-width: 420px) {
    nav {
        margin-bottom: 2.5rem;
    }

    .logo .logo-text {
        font-size: 2rem;
        margin-top: 8px;
    }

    .logo>p:nth-child(2) {
        font-size: .9rem;
        margin-bottom: 3px;
    }

    .hamburger-wrapper span {
        width: 25px;
        height: 2px;
    }

    .hamburger-wrapper:hover :nth-child(1),
    .hamburger-wrapper:focus :nth-child(1) {
        transform: translateY(-1px);
        background: #b84642;
    }

    .hamburger-wrapper:hover :nth-child(3),
    .hamburger-wrapper:focus :nth-child(3) {
        transform: translateY(1px);
    }

    input[type=checkbox]:checked~.hamburger-wrapper :nth-child(3) {
        transform: translateY(-4.5px) translateX(0) rotate(-45deg);
    }

    .nav-links>span:nth-child(-n+5) {
        margin-bottom: .8rem;
    }

    .nav-links>span:nth-child(-n+5)>a {
        font-size: 1rem;
    }

    .nav-links>span:nth-child(-n+5)>div>a {
        font-size: .9rem;
    }

    .hero--large_text {
        font-size: 2.3rem;
        -webkit-text-stroke: .3px rgb(12, 9, 75);
    }

    .hero--small_text {
        font-size: 1rem;
        margin-bottom: 3.4rem;
    }

    .btn {
        font-size: .9rem;
        width: 7.2rem;
        padding: .5rem 4px;
    }

    .call-to-action {
        font-size: .7rem;
        padding: .5rem 1rem .5rem 1rem;
        right: 1rem;
    }
}

